[package]
name = "regex-rs"
version = "0.1.0"
authors = ["Alexander Batischev <eual.jp@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Safe wrapper for POSIX regular expressions API"
homepage = "https://github.com/newsboat/regex-rs"
repository = "https://github.com/newsboat/regex-rs"
keywords = ["posix", "regex", "bindings"]
categories = ["api-bindings", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.11"
libc = ">=0.2.69"
